force-app/main/default/objects/branche__c/branche__c.object-meta.xml
<CustomObject>
    <description>Bank Branches</description>
    <label>branche</label>
    <nameField>
        <label>branche Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>