force-app/main/default/objects/branche__c/fields/AccountTypes__c.field-meta.xml
<CustomField>
    <fullName>AccountTypes__c</fullName>
    <label>AccountTypes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saving Account</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>