force-app/main/default/objects/branche__c/fields/Branch_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Branch_Created_Date__c</fullName>
    <description>Date</description>
    <inlineHelpText>Date</inlineHelpText>
    <label>Branch Created Date</label>
    <type>Date</type>
</CustomField>