force-app/main/default/objects/branche__c/fields/Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Branch_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Branch Type</description>
    <inlineHelpText>Branch Type</inlineHelpText>
    <label>Branch Type</label>
    <type>Checkbox</type>
</CustomField>