force-app/main/default/objects/branche__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of Branch</description>
    <inlineHelpText>place of branch location</inlineHelpText>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>