force-app/main/default/objects/branche__c/validationRules/LocationLength.validationRule-meta.xml
<ValidationRule>
    <fullName>LocationLength</fullName>
    <active>true</active>
    <description>Location Character Lengthl</description>
    <errorConditionFormula>ISNUMBER(Location__c)</errorConditionFormula>
    <errorMessage>Donot enter numbers here</errorMessage>
</ValidationRule>